--- a/guides/sep.html
+++ b/guides/sep.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/main.css">
    </head>
-    <body onload="checkState()">
+    <body>
       <div class="logo-container">
         <img src="../img/cutie.png" alt="beeg-yoshi" class="beegyoshi" width="90vw">
         <h1 class="bigTitle">SEP Information</h1>
@@ -37,46 +37,14 @@
     <div>
       <p class="button" id="button-background">Toggle Dark Mode</p>
     </div>
-    </body onload="checkState()">
+    </body>
 </html>
 
 <script>
     document.getElementById('button-home').onclick = () => window.location = "https://MatthewPierson.github.io/ios_downgrades.html";
     document.getElementById('button-background').onclick= () => toggleDarkMode();
-    function checkState() {
-      var element = document.body;
-      var check = localStorage.getItem('darkmodeState')
-      if (check === null) {
-        g = 0;
-        localStorage.setItem("darkmodeState",g);
-      }
-      if (check.includes("0")) { 
-        element.classList.toggle("dark-mode");
-        g = 1;
-        localStorage.setItem("darkmodeState",g);
-      }
-      if (check.includes("1")) { 
-        element.classList.toggle("dark-mode");
-        g = 0;
-        localStorage.setItem("darkmodeState",g);
-      }
-  }
   function toggleDarkMode() {
       var element = document.body;
-      var check = localStorage.getItem('darkmodeState')
-      if (check === null) {
-        g = 0;
-        localStorage.setItem("darkmodeState",g);
-      }
-      if (check.includes("0")) { 
-        element.classList.toggle("dark-mode");
-        g = 1;
-        localStorage.setItem("darkmodeState",g);
-      }
-      if (check.includes("1")) { 
-        element.classList.toggle("dark-mode");
-        g = 0;
-        localStorage.setItem("darkmodeState",g);
-      }
+      element.classList.toggle("dark-mode");
     } 
   </script>
