--- a/guides/sep.html
+++ b/guides/sep.html
@@ -21,7 +21,10 @@
       <li style="font-size: large;">Without a compatible SEP, you CANNOT downgrade.</li>
       <li style="font-size: large;">12.4.4 SEP (A7/A8 devices) allows for downgrades to 11.3 and higher.</li>
       <li style="font-size: large;">13.3 SEP (All other 64 Bit devices) allows for downgrades to 13.0 and higher.</li>
-      <li style="font-size: large;">13.3 SEP breaks Face-ID for relevant devices, Touch-ID however works fine all the way down to 13.0 (tested on a 6s).</li>
+      <li style="font-size: large;">13.3 SEP breaks Face-ID for relevant devices on any version lower then 13.3, Touch-ID however works fine all the way down to 13.0 (tested on a 6s).</li>
+      <br>
+      <li style="font-size: large;">There is no current way to restore using an unsigned SEP, you also cannot save SHSH for SEP like we can with iOS verions</li>
+      <li style="font-size: large;">If you have broken Touch-ID/Face-ID (e.g. Swapped homebuttons, swapped Face-ID module) you are still limited by SEP compatibility as SEP handles more then just Touch/Face-ID and a signed/compatible SEP is needed to boot/restore.</li>
       </ul>
       <div>
         <br>
