--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
     <p class="button" id="button-github">My Github</p>
     <p class="button" id="button-twitter">My twitter</p>
   </div>
+  <div>
+    <p class="button" id="button-repo">Add my repo to Cydia/Zebra</p>
+  </div>
   <br>
     <br>
     <br>
@@ -55,6 +58,7 @@
   document.getElementById('button-vieux').onclick = () => window.location = "https://github.com/MatthewPierson/Vieux";
   document.getElementById('button-github').onclick = () => window.location = "https://github.com/MatthewPierson";  
   document.getElementById('button-twitter').onclick = () => window.location = "https://twitter.com/mosk_i";
+  document.getElementById('button-repo').onclick = () => window.location = "cydia://url/https://cydia.saurik.com/api/share#?source=http://matthewpierson.github.io";
   document.getElementById('button-background').onclick= () => toggleDarkMode();
   function toggleDarkMode() {
       var element = document.body;
